Added basic unit test

--- a/ngBookDemos/ngBookDemos/App/1.DataBinding/Clock/Clock.html
+++ b/ngBookDemos/ngBookDemos/App/1.DataBinding/Clock/Clock.html
@@ -8,13 +8,6 @@
         {{ name }}
     </div>
     <script src="../../Scripts/angular.js"></script>
-    <script type="text/javascript">
-        var app = angular.module("clockApp", []);
-
-        app.controller("ClockController", ["$scope", function($scope) {
-            $scope.name = "Hello";
-        }]);
-
-    </script>
+    <script src="Clock.js"></script>
 </body>
 </html>
