--- a/ngBookDemos/ngBookDemos/App/1.DataBinding/Clock/Clock.html
+++ b/ngBookDemos/ngBookDemos/App/1.DataBinding/Clock/Clock.html
@@ -5,9 +5,10 @@
 </head>
 <body>
     <div data-ng-controller="ClockController">
-        {{ name }}
+        <div>{{ name }}</div>
+        <div>{{ clock.now}}</div>
     </div>
-    <script src="../../Scripts/angular.js"></script>
+    <script src="../../../Scripts/angular.js"></script>
     <script src="Clock.js"></script>
 </body>
 </html>
