--- a/ngBookDemos/ngBookDemos/App/7_Directives/Directives.html
+++ b/ngBookDemos/ngBookDemos/App/7_Directives/Directives.html
@@ -5,6 +5,10 @@
 </head>
 <body>
     <my-directive></my-directive>
+    <div data-my-directive=""></div>
+    <div class="my-directive"></div>
+
+
     <script src="../../Scripts/angular.js"></script>
     <script src="myDirective.js"></script>
 </body>
