Directives using isolated scope

--- a/ngBookDemos/ngBookDemos/App/7_Directives/Directives.html
+++ b/ngBookDemos/ngBookDemos/App/7_Directives/Directives.html
@@ -7,6 +7,9 @@
     <my-directive></my-directive>
     <div data-my-directive=""></div>
     <div class="my-directive"></div>
+    
+
+    <div data-my-second-directive="" data-my-url="google.com" data-my-text="Click here"></div>
 
 
     <script src="../../Scripts/angular.js"></script>
