Basic directives finished

--- a/ngBookDemos/ngBookDemos/App/7_Directives/Directives.html
+++ b/ngBookDemos/ngBookDemos/App/7_Directives/Directives.html
@@ -8,8 +8,8 @@
     <div data-my-directive=""></div>
     <div class="my-directive"></div>
     
-
-    <div data-my-second-directive="" data-my-url="google.com" data-my-text="Click here"></div>
+    <input type="text" data-ng-model="url" value="" />
+    <div data-my-second-directive="" data-my-url="url" data-my-text="Click here"></div>
 
 
     <script src="../../Scripts/angular.js"></script>
